# planars

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  Makefile  NEXT_STAGES.md  README.md  check_snapshots.py  codebook.yaml  conftest.py  diagnostic_classes.yaml  drive_config.json  generate_diagram.py  generate_sheets.py  generate_snapshots.py  import_sheets.py  make_file.R  make_forms.py  migrate_verbroot_to_verbstem.py  populate_sheets.py  pyproject.toml  regenerate_snapshots_hook.py  render_codebook.py  requirements.in  requirements.txt  restructure_sheets.py  sync_params.py  update_sheets.py
.claude/: settings.json
01_planar_input/: ciscategorial_parameters.tsv  ciscategorial_stan1293_blank.tsv  ciscategorial_stan1293_general_blank.tsv  diagnostics.tsv  make_forms.py  make_test_forms.py  noninterruption_stan1293_general_blank.tsv  planar_stan1293-20260209.tsv  subspan_parameters.tsv  subspan_stan1293_andCoordination_blank.tsv  subspanrepetition_stan1293_thatCOMP_blank.tsv
02_ciscategorial_output/: ciscategorial.py  ciscategorial_stan1293_general_filled.tsv
03_subspanrepetition/: subspanrepetition.py  subspanrepetition_stan1293_asyndeticPart_filled.tsv  subspanrepetition_stan1293_control_filled.tsv  subspanrepetition_stan1293_thatCOMP_filled.tsv
03_subspanrepetition_output/: .~lock.subspanrepetition_stan1293_andCoordination_blank.tsv#  .~lock.subspanrepetition_stan1293_andCoordination_full.tsv#  subspan_stan1293_control_blank.tsv  subspanrepetition.py  subspanrepetition_stan1293_andCoordination_blank.tsv  subspanrepetition_test.tsv  (+2 more)
(+295 files in other folders)
