[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "planars"
version = "0.1.0a13"
requires-python = ">=3.9"
dependencies = ["pandas", "plotly", "pyyaml"]
description = "Toolkit for deriving morphosyntactic constituency spans from annotated planar structures"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Jeff Good" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Text Processing :: Linguistic",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/jcgood/planars"

[tool.setuptools.packages.find]
include = ["planars*", "coding*", "schemas*"]

[tool.setuptools.package-data]
schemas = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
